#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-00
2011-12-09 Andy Salnikov
- switch to ndarray for accessing array data
- work-in-progress hdf5 generator added

Tag: V00-00-09
2011-06-27 Andy Salnikov
- fix missing method arguments in psanadoc

Tag: V00-00-08
2011-06-16 Andy Salnikov
- generate CSS file in DdlPsanaDoc

Tag: V00-00-07
2011-05-10 Andy Salnikov
- XmlReader: file name was incorrect if there were included files

Tag: V00-00-06
2011-04-07 Andy Salnikov
- added psana-doc backend which generates documentation for psana
  interfaces (generated by psana backend)
- many other changes everywhere related to documentation generation

Tag: V00-00-05
2011-03-31 Andy Salnikov
- renamed "dimensions" attribute into "shape"
- implemented support for "shape_method" attribute in XmlReared
- default shape_method name changed to use accessor name (if defined)
- added "variable" property to Type meaning that instances can have
  different size (true for CsPad::Element types)
- generation of _sizeof and member access methods now understand 
  variable types

Tag: V00-00-04
2011-03-30 Andy Salnikov
- adding support for the unknown-size types in pds2psana backend:
  - adding size argument for the constructor declaration of such types
  - definition of the constructor cannot be generated at this time
    and has to be added manually
  - there is exactly one type now which needs this, so manual definition
    is probably OK

Tag: V00-00-03
2011-03-28 Andy Salnikov
- implemented support for base types in DdlPds2Psana

Tag: V00-00-02
2011-03-21 Andy Salnikov
- fixing code generation for array member access

Tag: V00-00-01
2011-03-20 Andy Salnikov